Fix HTML structure and styling

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ img{
 
 <!-- HEADER -->
 <div class="header">
-    <img src="JD/JD3.jpg">
+    <img src="JD3.jpg">
     <h1>Collège Privé Loubo de Grand-Zattry</h1>
     <p>Plateforme officiellees résultats scolaires</p>
 </div>
@@ -219,3 +219,4 @@ img{
 
 </body>
 </html>
+
