Refactor election.html structure and styles

--- a/election.html
+++ b/election.html
@@ -163,7 +163,7 @@ menu{
 <div class="candidates">
 
 <div class="card">
-<img src="JD/JD3.jpg">
+<img src="JD3.jpg">
 <h3>Candidat 1</h3>
 <button onclick="voter(1)">Voter</button>
 <button class="programme" onclick="voirProgramme(1)">Programme</button>
@@ -171,7 +171,7 @@ menu{
 </div>
 
 <div class="card">
-<img src="JD/JD4.jpeg">
+<img src="JD4.jpeg">
 <h3>Candidat 2</h3>
 <button onclick="voter(2)">Voter</button>
 <button class="programme" onclick="voirProgramme(2)">Programme</button>
@@ -179,7 +179,7 @@ menu{
 </div>
 
 <div class="card">
-<img src="JD/JD5.jpeg">
+<img src="JD5.jpeg">
 <h3>Candidat 3</h3>
 <button onclick="voter(3)">Voter</button>
 <button class="programme" onclick="voirProgramme(3)">Programme</button>
@@ -329,4 +329,5 @@ function fermerModal(){
 </script>
 
 </body>
+
 </html>
