Fix HTML encoding issues in info.html

--- a/info.html
+++ b/info.html
@@ -183,7 +183,7 @@ footer{
 
         <!-- PERSONNE 1 -->
         <div class="card">
-            <img src="JD/JD5.jpeg" alt="Directeur">
+            <img src="JD5.jpeg" alt="Directeur">
             <h3>M. KOUAME JOSEPH</h3>
             <div class="role">Programmeur</div>
             <div class="phone">+2250594720472</div>
@@ -232,4 +232,5 @@ window.addEventListener('load', () => {
 </script>
 
 </body>
+
 </html>
