Restore resultats.html with original content

--- a/resultats.html
+++ b/resultats.html
@@ -201,7 +201,7 @@ table, th, td{
 
 <div class="menu">
     <h1><marquee>ANNEE SCOLAIRE 2025-2026</marquee></h1>
-    <img src="JD/JD3.jpg">
+    <img src="JD3.jpg">
     <!-- ✅ Lien vers accueil -->
     <a href="index.html">Accueil</a>
     <a href="resultats.html">résultats</a>
@@ -209,7 +209,7 @@ table, th, td{
     <a href="election.html">Election</a>
     <a href="#">Format des photos</a>
     <a href="#">Préinscription</a>
-    <img src="JD/JD4.jpeg">
+    <img src="JD4.jpeg">
 </div>
 
 <div class="container">
@@ -261,7 +261,7 @@ Voter maintenant
 <script>
 
 let admis = [
-{nom:"KOUAME OUFLE JOSEPH",genre:"M", date:"25/07/2006",numero:"16396197M",moyenne:17.27,valider:"✔",niveau:"BTS2",photo:"JD/JD5.jpeg",},
+{nom:"KOUAME OUFLE JOSEPH",genre:"M", date:"25/07/2006",numero:"16396197M",moyenne:17.27,valider:"✔",niveau:"BTS2",photo:"JD5.jpeg",},
 {nom:"KONAN KOUAKOU MARUIS",date:"25/07/2007",numero:"16396198M",moyenne:18.80},
 {nom:"KOUASSI AMOIN MURIELLE",date:"08/08/2004",numero:"250002PC",moyenne:9.99},
 {nom:"KONE FANYOU",date:"01/12/2005",numero:"16396200M",moyenne:6.00}
@@ -489,4 +489,5 @@ function allerElection(niveau, matricule){
 </script>
 
 </body>
+
 </html>
