--- a/election.html
+++ b/election.html
@@ -209,7 +209,7 @@ const dureeElection = 24 * 60 * 60 * 1000;
 
 const eleves = [
     {niveau:"BTS2", matricule:"16396197M",password:"7777"},
-    {niveau:"BTS2", matricule:"5678"},
+    {niveau:"BTS2", matricule:"IDA-25280",password:7776},
     {niveau:"BTS1", matricule:"9999"},
     {niveau:"6e", matricule:"8888"}
 ];
@@ -331,3 +331,4 @@ function fermerModal(){
 </body>
 
 </html>
+
